# memo

./: .gitattributes  AGENTS.md  README.md  biome.json  index.html  package-lock.json  package.json
.agent-work/features/2026-06-14-square-tab-active-underline/: goal-prompt.md  plan.md  research.md  spec.md  todo.md
.agents/skills/memo-feature-planning/: SKILL.md
.agents/skills/memo-feature-planning/agents/: openai.yaml
.agents/skills/memo-feature-planning/assets/: goal-prompt-template.md  plan-template.md  research-template.md  spec-template.md  todo-template.md
.agents/skills/memo-feature-planning/references/: artifact-contract.md  freshness-manifest.json  freshness-policy.md  repo-research-summary.md
.agents/skills/memo-feature-planning/scripts/: check-freshness.mjs  validate-artifacts.mjs
.github/workflows/: ci.yml  release.yml
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
src/: main.ts  model.test.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  store.rs  window.rs
src/app/: api.ts  model.test.ts  model.ts  state.ts  types.ts
src/interaction/: drag.ts
src/ui/: html.ts  render.test.ts  render.ts
