[package]
name = "memo"
version = "0.1.0"
description = "Ultra-lightweight macOS memo app"
authors = ["Sakasegawa"]
edition = "2024"

[lib]
name = "memo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.11.2", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSWindow"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSString"] }

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"
